# homework_analyse_nginx_logs

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  constants.py  docker-compose.yml  log_analyzer.py  pyproject.toml  tests.py
.github/workflows/: build.yml  lint.yml  python-app.yml  test.yml
