[project]
name = "homework-analyse-nginx-logs"
version = "0.1.0"
description = ""
authors = [
    {name = "alexandr",email = "gorbenich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "structlog (>=25.4.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.poetry]
package-mode = false
